Remove totals from dashboard; change titles to blue links; fix spacing of "Classes and groups" section.

--- a/app/assets/stylesheets/offcanvas.css
+++ b/app/assets/stylesheets/offcanvas.css
@@ -198,3 +198,7 @@ ul.annotation-tags {
 .annotation-tags input {
 	margin-right: 8px;
 }
+
+.panel-title > a {
+	color: #337ab7;
+}
